Ft/author routes (#8)
* Created first draft of list authors endpoint and unit test for it

* Finished GetAllAuthors Route

* Added getAuthorByID route

* Added route for creating a new author

* Added handlers to delete and patch authors

* Added Unit test for delete author by id

* Added tests for patch author by id
