# api/v1/docs/swagger.json
@@ -126,6 +126,276 @@
                 }
             }
         },
+        "/authors": {
+            "get": {
+                "description": "All authors are listed in a paginated manner",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authors"
+                ],
+                "summary": "List all authors",
+                "operationId": "authors-list-authors",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offset for the pagination",
+                        "name": "page_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of elements in one page",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of authors matching the given pagination parameters",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/AuthorResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorInternalServerError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new author",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authors"
+                ],
+                "summary": "Create new author",
+                "operationId": "authors-create-author",
+                "parameters": [
+                    {
+                        "description": "Data for the author to create",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/AuthorToCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "ID of the created author",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/authors/{id}": {
+            "get": {
+                "description": "One author, which matches the ID, is returned",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authors"
+                ],
+                "summary": "Get one author by ID",
+                "operationId": "authors-get-author-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the desired author",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Author that matches the ID",
+                        "schema": {
+                            "$ref": "#/definitions/AuthorResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorUnauthorized"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorNotFound"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorInternalServerError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "One author, which matches the ID, is deleted",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authors"
+                ],
+                "summary": "Delete one author by ID",
+                "operationId": "authors-delete-author-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the desired author to patch",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorUnauthorized"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorNotFound"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "One author, which matches the ID, is modified with the provided patch",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authors"
+                ],
+                "summary": "Patch one author by ID",
+                "operationId": "authors-patch-author-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the desired author to patch",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Patch for modifying the author",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/AuthorUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorUnauthorized"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorNotFound"
+                        }
+                    }
+                }
+            }
+        },
         "/heartbeat": {
             "get": {
                 "description": "Check if the API is reachable with this route",
@@ -151,6 +421,139 @@
         }
     },
     "definitions": {
+        "AuthorResponse": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "integer",
+                    "example": 1714462120
+                },
+                "firstName": {
+                    "type": "string",
+                    "example": "Moe"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "660c4b99bc1bc4aabe126cd1"
+                },
+                "imageName": {
+                    "type": "string",
+                    "example": "moezarella.png"
+                },
+                "instagramUrl": {
+                    "type": "string",
+                    "example": "https://wwww.instagram.com/moezarella/"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Zarella"
+                },
+                "modifiedAt": {
+                    "type": "integer",
+                    "example": 1714462120
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Moe Zarella"
+                },
+                "recipeCount": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "userCreated": {
+                    "$ref": "#/definitions/api.UserResponse"
+                },
+                "userId": {
+                    "type": "string",
+                    "example": "660c4b99bc1bc4aabe3e6cd1"
+                },
+                "websiteUrl": {
+                    "type": "string",
+                    "example": "https://www.moezarella.com"
+                },
+                "youtubeUrl": {
+                    "type": "string",
+                    "example": "https://www.youtube.com/channel/UCy8asdgasdf7RcC6OZffZA"
+                }
+            }
+        },
+        "AuthorToCreate": {
+            "type": "object",
+            "required": [
+                "name",
+                "userId"
+            ],
+            "properties": {
+                "firstName": {
+                    "type": "string",
+                    "example": "Moe"
+                },
+                "imageName": {
+                    "type": "string",
+                    "example": "moezarella.png"
+                },
+                "instagramUrl": {
+                    "type": "string",
+                    "example": "https://wwww.instagram.com/moezarella/"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Zarella"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Moe Zarella"
+                },
+                "userId": {
+                    "type": "string",
+                    "example": "660c4b99bc1bc4aabe3e6cd1"
+                },
+                "websiteUrl": {
+                    "type": "string",
+                    "example": "https://www.moezarella.com"
+                },
+                "youtubeUrl": {
+                    "type": "string",
+                    "example": "https://www.youtube.com/channel/UCy8asdgasdf7RcC6OZffZA"
+                }
+            }
+        },
+        "AuthorUpdate": {
+            "type": "object",
+            "properties": {
+                "firstName": {
+                    "type": "string",
+                    "example": "Moe"
+                },
+                "imageName": {
+                    "type": "string",
+                    "example": "moezarella.png"
+                },
+                "instagramUrl": {
+                    "type": "string",
+                    "example": "https://wwww.instagram.com/moezarella/"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Zarella"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Moe Zarella"
+                },
+                "websiteUrl": {
+                    "type": "string",
+                    "example": "https://www.moezarella.com"
+                },
+                "youtubeUrl": {
+                    "type": "string",
+                    "example": "https://www.youtube.com/channel/UCy8asdgasdf7RcC6OZffZA"
+                }
+            }
+        },
         "ErrorBadRequest": {
             "type": "object",
             "properties": {
@@ -236,6 +639,42 @@
                 }
             }
         },
+        "api.UserResponse": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "integer",
+                    "example": 1714462120
+                },
+                "email": {
+                    "type": "string",
+                    "example": "user@example.com"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "660c4b99bc1bc4aabe3e6cd1"
+                },
+                "isActive": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "modifiedAt": {
+                    "type": "integer",
+                    "example": 1714462120
+                },
+                "role": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/db.Role"
+                        }
+                    ],
+                    "example": "user"
+                }
+            }
+        },
         "authUserBody": {
             "type": "object",
             "required": [
@@ -254,6 +693,17 @@
                     "example": "s3cr3tP@ssw0rd"
                 }
             }
+        },
+        "db.Role": {
+            "type": "string",
+            "enum": [
+                "user",
+                "admin"
+            ],
+            "x-enum-varnames": [
+                "UserRole",
+                "AdminRole"
+            ]
         },
         "heartbeatResponse": {
             "type": "object",
